Encoder, Decoder and Events tied to one handler so more is completed per event loop

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>1.1.2.RELEASE</version>
+        </dependency>
     </dependencies>
     <name>StarNub</name>
     <url>http://www.starnub.org</url>
